--- a/mole.css
+++ b/mole.css
@@ -1,9 +1,56 @@
 /* Your code here */
+body {
+  margin: 0px;
+}
 
+.pf {
+  display: grid;
 
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: repeat(3, 1fr);
+  overflow: hidden;
+}
+
+.wgs {
+  height: 241px;
+  width: 100%;
+  position: relative;
+  display: inline-block;
+  overflow: hidden;
+  margin-left: 50px;
+}
+
+.wgs__mole-head {
+  height: 178px;
+  width: 188px;
+  position: absolute;
+  left: 54px;
+  transition: margin-top, 0.25s
+}
+
+.wgs__mole-head--hidden {
+  margin-top: 241px
+}
+
+.wgs__dirt-pile {
+  height: 110px;
+  width: 320px;
+  position: absolute;
+  bottom: 0;
+}
+
+@keyframes whackAnimation {
+  0% { transform: scale(1); }
+  50% { transform: scale(1.2); }
+  100% { transform: scale(1); }
+}
+
+.wgs__mole-head--whacked {
+  animation: whackAnimation 0.3s ease;
+}
 
 /* UNCOMMENT THE CODE BELOW WHEN DIRECTED */
-/* .sb {
+.sb {
   background-color: cornflowerblue;
   border-bottom: 1px solid #645DED;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.4);
@@ -12,17 +59,17 @@
   font-size: 30px;
   margin-bottom: 50px;
   padding: 10px 20px;
-} */
+}
 
-/* .sb__mole-counter {
+.sb__mole-counter {
   flex: 1 0 0;
   text-align: right;
-} */
+}
 
-/* .sb__score-holder {
+.sb__score-holder {
   flex: 1 0 0;
-} */
+}
 
-/* .sb__game-over--hidden {
+.sb__game-over--hidden {
   display: none;
-} */
+}
